--- a/css/main.css
+++ b/css/main.css
@@ -75,14 +75,16 @@ body {
 
 /* TABLERO */
 .wrapper {
+    margin-top: 11%;
     grid-area: baraja;
     padding: 2%;
-
     display: grid;
     justify-content: center;
     grid-template-rows: repeat(var(--rowNum), var(--gridHeight));
     grid-template-columns: repeat(var(--colNum), var(--gridWidht));
     gap: 20px;
+    border: solid #714613 3px;
+
 }
 
 /* CARTAS */
@@ -259,4 +261,47 @@ input[type='image'] {
     background-color: gray;
     border: 3px solid darkslategray;
     padding: 4px 12px;
+}
+
+/* Header and Nav */
+.menu{
+    margin-top: 2%;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    font-family: "good-times";
+  /*  background-color: #ed8e37;
+   /* width: 1000px;
+   /* background-color: #fff;
+  /*  background-color:#714613/*#207f5b /*#714613;/*#f8d11f /*#ed8e37;*/
+}
+nav{
+    max-width: 1024px;
+    margin: 0 auto;
+}
+header img{
+    padding: 0 20px;
+}
+
+nav ul{
+    float: center;
+    list-style: none;
+    text-align: center;
+    vertical-align: top;
+    margin: 10px 10px;
+}
+nav li{
+    list-style-type: none;
+    display: inline;
+    
+}
+nav li {
+    font-size: 3em;
+    line-height: 70px;
+    padding: 15px 10px;
+    color: #207f5b;
+}
+nav li a:hover{
+    color: white;
+ 
 }
